fail_crate/tests/option_instead_of_optional.rs
use inew::New;

#[derive(New)]
struct A {
    #[new(option)]
    x: u32
}

fn main() {}
